# pics-organiser

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: annotate-coverage-in-pr.yml  post-test-coverage-in-pr.yml  test-all-commits.yml
extra/: pylintrc
requirements/: build.txt  dev.txt
src/: Makefile  cli.py  main.cpp  main.py  notes.txt  picture.py  src.pro
src/files/: collections.py  file.py  manager.py  picture.py
src/tasks/: editors.py  reports.py
src/ui/: mainWindow.cpp  mainWindow.h  mainWindow.ui  mainwindow.py
test/: end_to_end_tests.sh  test_file.py  test_mainwindow.py  test_picture.py  test_pictures_collection.py  test_reports.py
test/files/: test_manager.py  test_picture.py
test/tasks/: test_editors.py  test_reports.py
test/test_ui/: test_mainwindow.py
test_assets/: text1.txt
