[project]
name = "pics-organiser"
version = "0.1.0"
description = "A CLI application that helps organise albums of pictures."
readme = "README.rst"
authors = [{ name = "Alberto Aguilera" }]
requires-python = ">= 3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
pics-org = "cli:cli"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.flake8]
exclude = [
    ".git",
    "*/__pycache__",
    ".venv",
    ".pytest_cache",
]
max-line-length = 120
max-complexity = 10
